# Risk-Qt-

./: CMakeLists.txt  main.cpp  manager.cpp  manager.h  player.cpp  player.h  territories.cpp  territories.h  territories.json  territories.json.autosave  territory.cpp  territory.h
